--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@
         <animal-sniffer.signature.groupId>org.codehaus.mojo.signature</animal-sniffer.signature.groupId>
         <animal-sniffer.signature.version>1.0</animal-sniffer.signature.version>
         <archiveClasses>false</archiveClasses>
-        <com.google.errorprone>2.0.21</com.google.errorprone>
+        <com.google.errorprone>2.1.1</com.google.errorprone>
         <currentYear>2017</currentYear>
         <!--  maven-javadoc-plugin -->
         <detectOfflineLinks>false</detectOfflineLinks>
@@ -189,30 +189,30 @@
         <version.antrun.plugin>1.8</version.antrun.plugin>
         <!-- PAR-155 : Produce project sources package distribution -->
         <version.apache-source-release-assembly-descriptor>1.0.4</version.apache-source-release-assembly-descriptor>
-        <version.archetype.plugin>2.3</version.archetype.plugin>
+        <version.archetype.plugin>3.0.1</version.archetype.plugin>
         <version.aspectj.plugin>1.7</version.aspectj.plugin>
-        <version.assembly.plugin>2.6</version.assembly.plugin>
+        <version.assembly.plugin>3.1.0</version.assembly.plugin>
         <version.buildhelper.plugin>1.9.1</version.buildhelper.plugin>
         <version.buildnumber.plugin>1.3</version.buildnumber.plugin>
         <version.bundle.plugin>2.5.0</version.bundle.plugin>
         <version.cargo.plugin>1.4.10</version.cargo.plugin>
-        <version.changes.plugin>2.11</version.changes.plugin>
-        <version.checkstyle.plugin>2.15</version.checkstyle.plugin>
-        <version.clean.plugin>2.6.1</version.clean.plugin>
+        <version.changes.plugin>2.12.1</version.changes.plugin>
+        <version.checkstyle.plugin>2.17</version.checkstyle.plugin>
+        <version.clean.plugin>3.0.0</version.clean.plugin>
         <version.clirr.plugin>2.6.1</version.clirr.plugin>
-        <version.compiler.plugin>3.3</version.compiler.plugin>
+        <version.compiler.plugin>3.7.0</version.compiler.plugin>
         <version.copy.plugin>0.2.5</version.copy.plugin>
-        <version.dependency.plugin>2.10</version.dependency.plugin>
+        <version.dependency.plugin>3.0.1</version.dependency.plugin>
         <version.deploy.plugin>2.8.2</version.deploy.plugin>
-        <version.docbkx.plugin>2.0.15</version.docbkx.plugin>
+        <version.docbkx.plugin>2.0.17</version.docbkx.plugin>
         <version.docck.plugin>1.0</version.docck.plugin>
         <version.duplicate-finder.plugin>1.0.9</version.duplicate-finder.plugin>
-        <version.ear.plugin>2.10</version.ear.plugin>
+        <version.ear.plugin>2.10.1</version.ear.plugin>
         <version.eclipse.plugin>2.9</version.eclipse.plugin>
-        <version.ejb.plugin>2.5</version.ejb.plugin>
-        <version.enforcer.plugin>1.4</version.enforcer.plugin>
-        <version.exec.plugin>1.4.0</version.exec.plugin>
-        <version.fabric8io.docker.plugin>0.15.16</version.fabric8io.docker.plugin>
+        <version.ejb.plugin>3.0.0</version.ejb.plugin>
+        <version.enforcer.plugin>3.0.0-M1</version.enforcer.plugin>
+        <version.exec.plugin>1.6.0</version.exec.plugin>
+        <version.fabric8io.docker.plugin>0.22.1</version.fabric8io.docker.plugin>
         <version.failsafe.plugin>${version.surefire.plugin}</version.failsafe.plugin>
         <version.findbugs.plugin>3.0.1</version.findbugs.plugin>
         <version.fmt.plugin>1.8.0</version.fmt.plugin>
@@ -225,8 +225,8 @@
         <version.install.plugin>2.5.2</version.install.plugin>
         <version.invoker>2.2</version.invoker>
         <version.invoker.plugin>1.10</version.invoker.plugin>
-        <version.jacoco.plugin>0.7.4.201502262128</version.jacoco.plugin>
-        <version.jar.plugin>2.6</version.jar.plugin>
+        <version.jacoco.plugin>0.7.9</version.jacoco.plugin>
+        <version.jar.plugin>3.0.2</version.jar.plugin>
         <version.javacc.plugin>2.6</version.javacc.plugin>
         <version.javadoc.plugin>2.10.2</version.javadoc.plugin>
         <version.javancss.plugin>2.1</version.javancss.plugin>
@@ -245,33 +245,33 @@
         <version.license.header.artifactid>che-eclipse-license-resource-bundle</version.license.header.artifactid>
         <version.license.header.groupid>org.eclipse.che.dev</version.license.header.groupid>
         <version.license.header.version>${version.resource-bundle}</version.license.header.version>
-        <version.license.plugin>1.8</version.license.plugin>
+        <version.license.plugin>1.14</version.license.plugin>
         <version.m2e.plugin>1.0.0</version.m2e.plugin>
-        <version.mycila-license.plugin>2.10</version.mycila-license.plugin>
+        <version.mycila-license.plugin>3.0</version.mycila-license.plugin>
         <version.plexus-utils>3.0.18</version.plexus-utils>
         <version.plexus.plugin>1.3.8</version.plexus.plugin>
-        <version.plugin.plugin>3.4</version.plugin.plugin>
-        <version.pmd.plugin>3.4</version.pmd.plugin>
-        <version.project-info-reports.plugin>2.8</version.project-info-reports.plugin>
+        <version.plugin.plugin>3.5</version.plugin.plugin>
+        <version.pmd.plugin>3.8</version.pmd.plugin>
+        <version.project-info-reports.plugin>2.9</version.project-info-reports.plugin>
         <version.rar.plugin>2.4</version.rar.plugin>
         <version.rat.plugin>0.10</version.rat.plugin>
-        <version.release.plugin>2.5.1</version.release.plugin>
+        <version.release.plugin>2.5.3</version.release.plugin>
         <version.remote-resources.plugin.version>1.5</version.remote-resources.plugin.version>
         <version.replacer.plugin>1.5.3</version.replacer.plugin>
         <version.resource-bundle>15</version.resource-bundle>
-        <version.resources.plugin>2.7</version.resources.plugin>
+        <version.resources.plugin>3.0.2</version.resources.plugin>
         <version.selenium.plugin>2.3</version.selenium.plugin>
         <version.shade.plugin>2.3</version.shade.plugin>
-        <version.site.plugin>3.4</version.site.plugin>
+        <version.site.plugin>3.6</version.site.plugin>
         <version.sonar-maven-report.plugin>0.1</version.sonar-maven-report.plugin>
         <version.sortpom.plugin>2.3.0</version.sortpom.plugin>
-        <version.source.plugin>2.4</version.source.plugin>
-        <version.surefire.plugin>2.18.1</version.surefire.plugin>
+        <version.source.plugin>3.0.1</version.source.plugin>
+        <version.surefire.plugin>2.20.1</version.surefire.plugin>
         <version.taglist.plugin>2.4</version.taglist.plugin>
         <version.tomcat7.plugin>2.2</version.tomcat7.plugin>
-        <version.versions.plugin>2.1</version.versions.plugin>
+        <version.versions.plugin>2.4</version.versions.plugin>
         <version.wagon>2.7</version.wagon>
-        <version.war.plugin>2.6</version.war.plugin>
+        <version.war.plugin>3.1.0</version.war.plugin>
         <version.wikbook.plugin>0.9.45</version.wikbook.plugin>
         <version.xml.plugin>1.0</version.xml.plugin>
         <version.yuicompressor.plugin>0.7.1</version.yuicompressor.plugin>
