--- a/pom.xml
+++ b/pom.xml
@@ -249,6 +249,7 @@
         <version.m2e.plugin>1.0.0</version.m2e.plugin>
         <version.mycila-license.plugin>2.10</version.mycila-license.plugin>
         <version.plexus-utils>3.0.18</version.plexus-utils>
+        <version.plexus.component.metadata.plugin>1.7.1</version.plexus.component.metadata.plugin>
         <version.plexus.plugin>1.3.8</version.plexus.plugin>
         <version.plugin.plugin>3.4</version.plugin.plugin>
         <version.pmd.plugin>3.4</version.pmd.plugin>
@@ -311,6 +312,11 @@
         <pluginManagement>
             <!-- All plugins ordered by shortname (antrun, assembly ...) -->
             <plugins>
+                <plugin>
+                    <groupId>org.codehaus.plexus</groupId>
+                    <artifactId>plexus-component-metadata</artifactId>
+                    <version>${version.plexus.component.metadata.plugin}</version>
+                </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
