--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,10 @@
     <prerequisites>
         <maven>${maven.min.version}</maven>
     </prerequisites>
+    <modules>
+        <module>che-eclipse-license-resource-bundle</module>
+        <module>che-codestyle</module>
+    </modules>
     <scm>
         <connection>scm:git:git@github.com:eclipse/che-parent.git</connection>
         <developerConnection>scm:git:git@github.com:eclipse/che-parent.git</developerConnection>
@@ -260,7 +264,7 @@
         <version.release.plugin>2.5.3</version.release.plugin>
         <version.remote-resources.plugin.version>1.5</version.remote-resources.plugin.version>
         <version.replacer.plugin>1.5.3</version.replacer.plugin>
-        <version.resource-bundle>15</version.resource-bundle>
+        <version.resource-bundle>${project.version}</version.resource-bundle>
         <version.resources.plugin>3.0.2</version.resources.plugin>
         <version.selenium.plugin>2.3</version.selenium.plugin>
         <version.shade.plugin>2.3</version.shade.plugin>
