simplify build process: 1. merge che-dependencies into che-parent 2. support building and releasing che-deps and che-parent at the same time
Change-Id: Ie27a37739bef073f82dc3464b6d9244cbec3c0ea
Signed-off-by: nickboldt <nboldt@redhat.com>

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
     <modules>
         <module>che-eclipse-license-resource-bundle</module>
         <module>che-codestyle</module>
+        <module>che-dependencies</module>
     </modules>
     <scm>
         <connection>scm:git:git@github.com:eclipse/che-parent.git</connection>
