fixup! Used tag version of che-dev independent from che-parent

--- a/pom.xml
+++ b/pom.xml
@@ -1028,6 +1028,7 @@
                     <version>${version.selenium.plugin}</version>
                 </plugin>
                 <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-site-plugin</artifactId>
                     <version>${version.site.plugin}</version>
                     <configuration>
