--- a/eclipse-license-resource-bundle/pom.xml
+++ b/eclipse-license-resource-bundle/pom.xml
@@ -14,11 +14,29 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.eclipse.che.parent</groupId>
         <artifactId>maven-parent-pom</artifactId>
+        <groupId>org.eclipse.che.parent</groupId>
         <version>6.8.0-SNAPSHOT</version>
+        <relativePath>../parent</relativePath>
     </parent>
-    <artifactId>che-codestyle</artifactId>
+    <artifactId>che-eclipse-license-resource-bundle</artifactId>
     <packaging>jar</packaging>
-    <name>Che codestyle resources</name>
+    <name>Eclipse license codestyle</name>
+    <description>Header Texts and others License resources</description>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-remote-resources-plugin</artifactId>
+                <version>1.5</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>bundle</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
