--- a/dependencies/pom.xml
+++ b/dependencies/pom.xml
@@ -17,7 +17,7 @@
         <artifactId>maven-parent-pom</artifactId>
         <groupId>org.eclipse.che.parent</groupId>
         <version>6.8.0-SNAPSHOT</version>
-        <relativePath />
+        <relativePath>../parent</relativePath>
     </parent>
     <groupId>org.eclipse.che.depmgt</groupId>
     <artifactId>maven-depmgt-pom</artifactId>
