--- a/eclipse-license-resource-bundle/pom.xml
+++ b/eclipse-license-resource-bundle/pom.xml
@@ -13,16 +13,15 @@
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <artifactId>maven-parent-pom</artifactId>
-        <groupId>org.eclipse.che.parent</groupId>
-        <version>6.8.0-SNAPSHOT</version>
-        <relativePath>../parent</relativePath>
-    </parent>
+    <groupId>org.eclipse.che.parent</groupId>
     <artifactId>che-eclipse-license-resource-bundle</artifactId>
+    <version>6.8.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>Eclipse license codestyle</name>
     <description>Header Texts and others License resources</description>
+
+    <!-- NOTE: this file is not source validated for sort / license stuff, because it's upstream from the parent pom -->
+
     <build>
         <plugins>
             <plugin>
