move codenvy-release profile to root so can be used for all downstream poms/jars
Change-Id: I2af7b59435991120cdd965bd5cd7ee777fd705b6
Signed-off-by: nickboldt <nboldt@redhat.com>

--- a/eclipse-license-resource-bundle/pom.xml
+++ b/eclipse-license-resource-bundle/pom.xml
@@ -13,9 +13,12 @@
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.eclipse.che.parent</groupId>
+    <parent>
+        <groupId>org.eclipse.che.parent</groupId>
+        <artifactId>maven-parent-pom-root</artifactId>
+        <version>6.8.0-SNAPSHOT</version>
+    </parent>
     <artifactId>che-eclipse-license-resource-bundle</artifactId>
-    <version>6.8.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>Eclipse license codestyle</name>
     <description>Header Texts and others License resources</description>
