--- a/dependencies/pom.xml
+++ b/dependencies/pom.xml
@@ -65,10 +65,11 @@
         <javax.websocket.api.version>1.1</javax.websocket.api.version>
         <javax.ws.rs.version>2.0</javax.ws.rs.version>
         <jdbc.postgresql-driver.version>${org.postgresql.version}</jdbc.postgresql-driver.version>
+        <jdt.ls.extension.api.version>0.0.1-SNAPSHOT</jdt.ls.extension.api.version>
         <joda-time.version>2.3</joda-time.version>
         <log4j.version>1.2.17</log4j.version>
         <logstash.logback.encoder.version>4.11</logstash.logback.encoder.version>
-        <lsp4j.version>0.3.0</lsp4j.version>
+        <lsp4j.version>0.4.0.M6</lsp4j.version>
         <net.java.dev.jna.version>4.1.0</net.java.dev.jna.version>
         <org.antlr.st4.version>4.0.7</org.antlr.st4.version>
         <org.antlr.version>3.5.2</org.antlr.version>
