--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,11 @@
 <!--
 
     Copyright (c) 2012-2018 Red Hat, Inc.
-    All rights reserved. This program and the accompanying materials
-    are made available under the terms of the Eclipse Public License v1.0
-    which accompanies this distribution, and is available at
-    http://www.eclipse.org/legal/epl-v10.html
+    This program and the accompanying materials
+    are made available under the terms of the Eclipse Public License v2.0
+    which is available at http://www.eclipse.org/legal/epl-2.0.html
+
+    SPDX-License-Identifier: EPL-2.0
 
     Contributors:
       Red Hat, Inc. - initial API and implementation
@@ -263,7 +264,7 @@
         <version.release.plugin>2.5.3</version.release.plugin>
         <version.remote-resources.plugin.version>1.5</version.remote-resources.plugin.version>
         <version.replacer.plugin>1.5.3</version.replacer.plugin>
-        <version.resource-bundle>16</version.resource-bundle>
+        <version.resource-bundle>17</version.resource-bundle>
         <version.resources.plugin>3.0.2</version.resources.plugin>
         <version.selenium.plugin>2.3</version.selenium.plugin>
         <version.shade.plugin>2.3</version.shade.plugin>
