fixup! Add mysql version

--- a/dependencies/pom.xml
+++ b/dependencies/pom.xml
@@ -70,7 +70,7 @@
         <log4j.version>1.2.17</log4j.version>
         <logstash.logback.encoder.version>4.11</logstash.logback.encoder.version>
         <lsp4j.version>0.3.0</lsp4j.version>
-        <mysql.version>8.0.12</mysql.version>
+        <mysql.connector.version>8.0.12</mysql.connector.version>
         <net.java.dev.jna.version>4.1.0</net.java.dev.jna.version>
         <org.antlr.st4.version>4.0.7</org.antlr.st4.version>
         <org.antlr.version>3.5.2</org.antlr.version>
@@ -642,7 +642,7 @@
             <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
-                <version>${mysql.version}</version>
+                <version>${mysql.connector.version}</version>
             </dependency>
             <dependency>
                 <groupId>net.java.dev.jna</groupId>
