--- a/dependencies/pom.xml
+++ b/dependencies/pom.xml
@@ -17,18 +17,18 @@
     <parent>
         <artifactId>maven-parent-pom</artifactId>
         <groupId>org.eclipse.che.parent</groupId>
-        <version>6.12.0</version>
+        <version>6.12.1-SNAPSHOT</version>
     </parent>
     <groupId>org.eclipse.che.depmgt</groupId>
     <artifactId>maven-depmgt-pom</artifactId>
-    <version>6.12.0</version>
+    <version>6.12.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Che Dependency Management POM</name>
     <description>Provides version of third parties artifacts to use in Codenvy platform projects</description>
     <scm>
         <connection>scm:git:git@github.com:eclipse/che-dependencies.git</connection>
         <developerConnection>scm:git:git@github.com:eclipse/che-dependencies.git</developerConnection>
-        <tag>6.12.0</tag>
+        <tag>HEAD</tag>
         <url>https://github.com/eclipse/che-dependencies</url>
     </scm>
     <properties>
