--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.eclipse.che.parent</groupId>
     <artifactId>maven-parent-pom</artifactId>
-    <version>6.12.0</version>
+    <version>6.12.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Che parent POM</name>
     <description>Provides default project configuration for Che projects</description>
@@ -49,7 +49,7 @@
     <scm>
         <connection>scm:git:git@github.com:eclipse/che-parent.git</connection>
         <developerConnection>scm:git:git@github.com:eclipse/che-parent.git</developerConnection>
-        <tag>6.12.0</tag>
+        <tag>HEAD</tag>
         <url>https://fisheye.codenvy.com/browse/maven-parent-pom</url>
     </scm>
     <issueManagement>
