--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <!-- maven-compiler-plugin -->
         <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.java.compat.skip>false</maven.java.compat.skip>
         <!-- maven-enforcer-plugin -->
         <maven.min.version>3.3.1</maven.min.version>
         <!-- **************************************** -->
@@ -1530,6 +1531,7 @@
                                     <goal>enforce</goal>
                                 </goals>
                                 <configuration>
+                                    <skip>${maven.java.compat.skip}</skip>
                                     <rules>
                                         <checkSignatureRule implementation="org.codehaus.mojo.animal_sniffer.enforcer.CheckSignatureRule">
                                             <signature>
