--- a/dependencies/pom.xml
+++ b/dependencies/pom.xml
@@ -54,9 +54,9 @@
         <commons-fileupload.version>1.3.3</commons-fileupload.version>
         <commons-io.version>2.4</commons-io.version>
         <commons-lang.version>2.6</commons-lang.version>
-        <io.fabric8.kubernetes-client>3.1.12</io.fabric8.kubernetes-client>
-        <io.fabric8.kubernetes-model>2.0.9</io.fabric8.kubernetes-model>
-        <io.fabric8.openshift-client.version>3.1.12</io.fabric8.openshift-client.version>
+        <io.fabric8.kubernetes-client>4.1.0</io.fabric8.kubernetes-client>
+        <io.fabric8.kubernetes-model>${io.fabric8.kubernetes-client}</io.fabric8.kubernetes-model>
+        <io.fabric8.openshift-client.version>${io.fabric8.kubernetes-client}</io.fabric8.openshift-client.version>
         <io.swagger.version>1.5.9</io.swagger.version>
         <javax.annotation.version>1.2</javax.annotation.version>
         <javax.inject.version>1</javax.inject.version>
