--- a/dependencies/pom.xml
+++ b/dependencies/pom.xml
@@ -140,6 +140,10 @@
         <com.beust.jcommander.version>1.27</com.beust.jcommander.version>
         <com.tngtech.java>1.9.3</com.tngtech.java>
         <com.dumbster.version>1.7.1</com.dumbster.version>
+        <io.jaegertracing.version>0.32.0</io.jaegertracing.version>
+        <io.opentracing.version>0.31.0</io.opentracing.version>
+        <io.opentracing.tracerresolver.version>0.1.5</io.opentracing.tracerresolver.version>
+        <io.opentracing.web-servlet-filter.version>0.2.0</io.opentracing.web-servlet-filter.version>
         <com.googlecode.gwt-test-utils.version>0.47</com.googlecode.gwt-test-utils.version>
         <?SORTPOM RESUME?>
     </properties>
@@ -488,9 +492,50 @@
                 <version>${io.fabric8.openshift-client.version}</version>
             </dependency>
             <dependency>
+                <groupId>io.jaegertracing</groupId>
+                <artifactId>jaeger-client</artifactId>
+                <version>${io.jaegertracing.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <artifactId>*</artifactId>
+                        <groupId>org.apache.httpcomponents</groupId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>io.jaegertracing</groupId>
+                <artifactId>jaeger-core</artifactId>
+                <version>${io.jaegertracing.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.jaegertracing</groupId>
+                <artifactId>jaeger-tracerresolver</artifactId>
+                <version>${io.jaegertracing.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>io.jsonwebtoken</groupId>
                 <artifactId>jjwt</artifactId>
                 <version>${io.jsonwebtoken.jjwt.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.opentracing</groupId>
+                <artifactId>opentracing-api</artifactId>
+                <version>${io.opentracing.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.opentracing</groupId>
+                <artifactId>opentracing-util</artifactId>
+                <version>${io.opentracing.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.opentracing.contrib</groupId>
+                <artifactId>opentracing-tracerresolver</artifactId>
+                <version>${io.opentracing.tracerresolver.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.opentracing.contrib</groupId>
+                <artifactId>opentracing-web-servlet-filter</artifactId>
+                <version>${io.opentracing.web-servlet-filter.version}</version>
             </dependency>
             <dependency>
                 <groupId>io.swagger</groupId>
@@ -1001,7 +1046,7 @@
                     </exclusion>
                 </exclusions>
             </dependency>
-             <dependency>
+            <dependency>
                 <groupId>org.eclipse.tycho</groupId>
                 <artifactId>org.eclipse.osgi</artifactId>
                 <version>${org.eclipse.osgi.version}</version>
