Add to git ignore Jenkins CI working files
Signed-off-by: Vitalii Parfonov <vparfono@redhat.com>

--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,12 @@ test-output/
 *.war
 *.ear
 
+# Jenkins CI #
+##############
+env-toolkit
+jenkins-env
+jenkins-env.json
+
 
 
 # Logs and databases #
